Updated page TechDraw LengthDimension/fr

--- a/wiki/fr/TechDraw_LengthDimension.html
+++ b/wiki/fr/TechDraw_LengthDimension.html
@@ -70,8 +70,8 @@
 <li>Si vous avez s&eacute;lectionn&eacute; une g&eacute;om&eacute;trie dans la vue 3D, ajoutez la bonne vue TechDraw &agrave; la s&eacute;lection en la s&eacute;lectionnant dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li><span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span>&nbsp;: si la <a href="../fr/TechDraw_Preferences.html#Cotes" title="TechDraw Preferences/fr">pr&eacute;f&eacute;rence</a> <b>Outils de cotation</b> est r&eacute;gl&eacute;e sur <code>Outil unique</code> (par d&eacute;faut)&nbsp;: appuyez sur la fl&egrave;che vers le bas &agrave; droite du bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> et s&eacute;lectionnez l'option <b><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizChainDimension.svg&amp;filetimestamp=20240707201554&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cotes horizontales</b> du menu d&eacute;roulant.</li>
-<li>Si cette pr&eacute;f&eacute;rence a une valeur diff&eacute;rente (et dans <span style="font-size:small;color:blue;">version 0.21 et pr&eacute;c&eacute;dentes</span>)&nbsp;: appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_LengthDimension.svg&amp;filetimestamp=20241126213900&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LengthDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer une cote de longueur</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_LengthDimension.svg&amp;filetimestamp=20241126213900&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LengthDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer une cote de longueur</b> du menu.</li></ul></li>
+<li>Si cette pr&eacute;f&eacute;rence a une valeur diff&eacute;rente (et dans <span style="font-size:small;color:blue;">version 0.21 et pr&eacute;c&eacute;dentes</span>)&nbsp;: appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_LengthDimension.svg&amp;filetimestamp=20241126213900&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LengthDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Cote de longueur</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_LengthDimension.svg&amp;filetimestamp=20241126213900&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LengthDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cote de longueur</b> du menu.</li></ul></li>
 <li>Une cote est ajout&eacute;e &agrave; la vue.</li>
 <li>La cote peut &ecirc;tre d&eacute;plac&eacute;e jusqu'&agrave; la position souhait&eacute;e.</li>
 <li>Si n&eacute;cessaire, ajoutez des tol&eacute;rances comme d&eacute;crit sur <a href="../fr/TechDraw_Geometric_dimensioning_and_tolerancing.html#Tol.C3.A9rances" title="TechDraw Geometric dimensioning and tolerancing/fr">cette page</a>.</li></ol>
@@ -277,15 +277,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124104250
+Cached time: 20260124104353
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.190 seconds
-Real time usage: 0.262 seconds
+CPU time usage: 0.165 seconds
+Real time usage: 0.261 seconds
 Preprocessor visited node count: 2642/1000000
-Post&#8208;expand include size: 48317/2097152 bytes
-Template argument size: 13423/2097152 bytes
+Post&#8208;expand include size: 48291/2097152 bytes
+Template argument size: 13397/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -293,19 +293,19 @@ Unstrip post&#8208;expand size: 3082/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   83.787      1 -total
- 24.20%   20.277     34 Template:PropertyData
- 22.68%   19.002     47 Template:Variable
- 10.73%    8.987      1 Template:TechDraw_Tools_navi/fr
-  9.09%    7.620      2 Template:Navigation_menu_2
-  7.80%    6.539     13 Template:PropertyView
-  7.31%    6.126     11 Template:Value
-  6.86%    5.749      1 Template:Userdocnavi/fr
-  5.11%    4.281     49 Template:Incode
-  4.34%    3.637      1 Template:Code
+100.00%   89.119      1 -total
+ 24.93%   22.216     47 Template:Variable
+ 23.65%   21.076     34 Template:PropertyData
+  9.93%    8.851     13 Template:PropertyView
+  9.36%    8.340      1 Template:TechDraw_Tools_navi/fr
+  7.74%    6.894      2 Template:Navigation_menu_2
+  6.48%    5.773     11 Template:Value
+  4.79%    4.272     49 Template:Incode
+  4.47%    3.980      1 Template:Userdocnavi/fr
+  4.00%    3.564      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87915-0!canonical and timestamp 20260124104249 and revision id 1743283. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87915-0!canonical and timestamp 20260124104352 and revision id 1743285. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
